layout_new.css
/*
    Document   : layout
    Created on : 01-Aug-2012, 00:00:00
    Author     : juancarlosfarah
    Description:
    Purpose of the stylesheet follows.
*/

/* Standard Template Elements---------------------------------- */


@font-face {
    font-family: 'BebasNeue';
    src: url('fonts/BebasNeue-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

body {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #000;
    font-family: 'Ropa Sans', sans-serif;
}

span.nobr {
    white-space: nowrap;
}

.album {
    padding-top: 25px;
    padding-bottom: 25px;
}

#adult-violence {
    background: #000;
    height: 100vh;
}

.adult-violence {
    background: url(images/adult-violence.jpg) no-repeat center center;
    background-size: cover;
    height: 100vh;
    font-family: "BebasNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.adult-violence-margin {
    height: calc(100vh - 240px);
}

#delilah {
    background: white;
    height: 100vh;
}

.delilah {
    background: url(images/delilah.jpg) no-repeat center center;
    background-size: 100%;
    height: 100vh;
    font-family: "BebasNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.a-big-house-by-the-lake {
    background: url(images/a-big-house-by-the-lake.jpg) no-repeat scroll;
    background-size: cover;
    font-family: "BebasNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.adentro-afuera {
    background: url(images/adentro-afuera-tile.png) repeat-x scroll;
    background-size: auto 100%;
}

.solara {
    background: url(images/bg_solara_1080.jpg) no-repeat center center;
    background-size: cover;
}

.empty-beaches-island {
    height: 100%;
    width: auto;
    max-width: 100%;
}

.empty-beaches {
    background: url(images/empty-beaches.jpg) no-repeat scroll;
    background-size: cover;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.adult-violence-text,
.delilah-text,
.a-big-house-by-the-lake-text,
.empty-beaches-text,
.adentro-afuera-text,
.solara-text {
    padding-left: 25px;
}

.empty-beaches-water {
    background: url(images/empty-beaches-water.png) no-repeat center center fixed;
    background-size: cover;
    opacity: 0.6;
    background-clip: content-box;
}

.empty-beaches h1,
.empty-beaches h2,
.empty-beaches h3 {
    font-weight: 200;
}

a.links:hover {
    cursor: pointer;
}

.links h4,
.links-empty-beaches h4,
.links-empty-beaches a {
    font-weight: 200;
}

.download-av:hover,
.download-delilah:hover,
.download-abhbtl:hover,
.download-eb:hover,
.download-aa:hover,
.download-s:hover,
.download-wilu:hover,
.download-hd:hover {
    cursor: pointer;
}

.muted {
    opacity: 1;
    border: solid 1px;
}

.highlighted {
    opacity: 1;
    border: solid 1px;
}

.delilah-margin {
    height: calc(100vh - 240px);
}

.empty-beaches-margin-lower {
    margin-top: 20px;
}

.a-big-house-by-the-lake-band-name {
    font-size: 40px;
}
.a-big-house-by-the-lake-album-title {
    font-size: 30px;
}

.adentro-afuera-title,
.solara-title {
    font-size: 80px;
}

.album-title,
.links {
    opacity: 0.75;
}

.links-empty-beaches {
    opacity: 1;
}

.rectangle-colors {

}

.icon-128 {
    width: 128px;
    height: 128px;
}

.icon-96 {
    width: 96px;
    height: 96px;
}

.icon-78 {
    width: 78px;
    height: 78px;
}

.icon-64 {
    width: 64px;
    height: 64px;
}

.img-center {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

area:hover {
    cursor: pointer;
}


.black {
    color: #000;
    text-decoration: none;
}

.yellow {
    color: #fff200;
    text-decoration: none;
}

.magenta {
    color: #6c343d;
}

.white {
    color: white;
}

/* CONTAINERS */

.container_hidden {
    display: none;
    visibility: hidden;
}

.header {
    width: 100%;
}

#top {
    visibility: hidden;
}

#bottom {
    visibility: visible;
}

/* LINKS */

.links_solara {
    color: #fff200;
    padding: 2px;
    line-height: 36px;
    margin: auto;
    font-size: 36px;
    font-weight: bold;
}

.links_solara a:link, a:active, a:visited {
    color: #fff200;
    text-decoration: none;
}

.links_solara a:hover {
    color: #fff;
    text-decoration: underline;
}

.links_adentro-afuera {
    color: #6c343d;
    padding: 2px;
    line-height: 36px;
    margin: auto;
    font-size: 36px;
    font-weight: bold;

}

.links_adentro-afuera a:link, a:active, a:visited {
    color: #6c343d;
    text-decoration: none;
}

.links_adentro-afuera a:hover {
    color: #000;
    text-decoration: underline;
}

/* TABLES */

.table_solara {
    text-align: center;
    border: 0;
    width: 100%;
    margin-bottom: 40px;
    margin-top: 20px;
}

.table_solara a:link, a:active, a:visited {
    color: #fff200;
    text-decoration: none;
}

.table_solara a:hover {
    color: #fff;
    text-decoration: underline;
}

.table_adentro-afuera {
    text-align: center;
    border: 0;
    width: 100%;
    margin-bottom: 40px;
    margin-top: 20px;
}

.table_adentro-afuera a:link, a:active, a:visited {
    color: #6c343d;
    text-decoration: none;
}

.table_adentro-afuera a:hover {
    color: #000;
    text-decoration: underline;
}

.table_icons {
    font-size: 14px;
    text-align: center;
    border: 0;
    width: 90%;
    margin: auto;
    margin-bottom: 20px;
}

.table_icons img {
    vertical-align: middle;
}

.table_icons td.album img {
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

.table_icons a:hover {
    opacity: 0.5;
}


/* ALTERNATIVE SCREENS */

@media screen and (max-height: 640px) {
    .links_solara {
        color: #ffffff;
        padding: 0;
        display: block;
        line-height: 30px;
        margin: auto;
        font-size: 28px;
        font-weight: bold;
    }
    .links_adentro-afuera {
        color: #ffffff;
        padding: 0;
        display: block;
        line-height: 30px;
        margin: auto;
        font-size: 28px;
        font-weight: bold;
    }
}

@media (min-width: 992px) and (max-width: 1199px) {
    .adentro-afuera-title,
    .solara-title {
        font-size: 70px;
    }

}

@media (min-width: 768px) and (max-width: 991px) {
    .adentro-afuera-title,
    .solara-title {
        font-size: 60px;
    }
}

@media (min-width: 481px) and (max-width: 767px) {
    .adentro-afuera-title,
    .solara-title {
        font-size: 45px;
    }
    .a-big-house-by-the-lake {
        background: url(images/a-big-house-by-the-lake-mobile.jpg) no-repeat scroll;
        background-size: cover;
    }
    .delilah {
        background: url(images/delilah-mobile.jpg) no-repeat;
        background-size: 100%;
    }
    .adult-violence {
        background: url(images/adult-violence-mobile.jpg) no-repeat center center;
        background-size: cover;
    }
}

@media (max-width: 480px) {
    .adentro-afuera-title,
    .solara-title {
        font-size: 36px;
    }
    .a-big-house-by-the-lake {
        background: url(images/a-big-house-by-the-lake-mobile.jpg) no-repeat scroll;
        background-size: cover;
    }
    .delilah {
        background: url(images/delilah-mobile.jpg) no-repeat center center;
        background-size: 100%;
    }
    .adult-violence {
        background: url(images/adult-violence-mobile.jpg) no-repeat center center;
        background-size: cover;
    }
}

